--- a/src/app/components/product-item/product-item.component.html
+++ b/src/app/components/product-item/product-item.component.html
@@ -1,6 +1,12 @@
 <div class="product-item">
-  <img [src]="product.url" alt="{{product.name}}" />
-  <h3>{{ product.name }}</h3>
+  <a [routerLink]="['/product', product.id]">
+    <img [src]="product.url" alt="{{product.name}}" class="product-image" />
+  </a>
+  
+  <a [routerLink]="['/product', product.id]" class="product-link">
+    <h3>{{ product.name }}</h3>
+  </a>
+
   <p>{{ product.description }}</p>
   <p>{{ product.price | currency }}</p>
 
